# AdventOfCode2024

./: README.md  run-all.sh
01/: Makefile  p1.c  p2.c
02/: Makefile  p1.cpp  p2.cpp
03/: .gitignore  Makefile  p1.cs  p2.cs
04/: .gitignore  Makefile  Part1.java  Part2.java
05/: .gitignore  Makefile  p1.kt  p2.kt
06/: .gitignore  Makefile  p1.scala  p2.scala
07/: Makefile  p1.lisp  p2.lisp  p2_v2.lisp
08/: .gitignore  Makefile  p1.sql  p2.sql  run-p1.sh  run-p2.sh
09/: .gitignore  Makefile  p1.c  p1.s  p2.c  p2.s
10/: .gitignore  Makefile  p1.f90  p2.f90
11/: Makefile  p1.rs  p2.rs
12/: Makefile
12/p1/: go.mod  p1.go
12/p2/: go.mod  p2.go
13/: Makefile  p1.swift  p2.swift
14/: .gitignore  Makefile  input.txt  p1.ml  p2.ml
15/: Makefile  p1.pl  p2.pl
16/: Gemfile  Makefile  p1.rb  p2.rb
17/: Makefile  p1.php  p2.php
18/: .gitignore  Makefile  input.txt  p1.ts  p2.ts  package-lock.json  package.json  test.txt
19/: Makefile  p1.py  p2.py
20/: Makefile  p1.r  p2.r
21/: Makefile  p1.erl  p2.erl
22/: Makefile  p1.exs  p2.exs
23/: Makefile  d23.cabal
23/app/: P1.hs  P2.hs
24/: Makefile  README.md  build.zig  input2.txt
24/src/: p1.zig  p2.zig  root.zig
25/: Makefile  p1.hc  p1.py
