cabal-version:      2.4
name:               d23
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             RenoirTan
maintainer:         renoirtan2005@gmail.com

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

executable p1
    main-is:          P1.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base, split, containers, text
    --, split == 0.2.5, containers == 0.6.5.1, text == 1.2.5.0
    hs-source-dirs:   app
    default-language: Haskell2010

executable p2
    main-is:          P2.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base, split, containers, text
    --, split == 0.2.5, containers == 0.6.5.1, text == 1.2.5.0
    hs-source-dirs:   app
    default-language: Haskell2010